tests/compile-fail/unimplemented.rs
//error-pattern:begin_panic_fmt

fn main() {
    assert_eq!(5, 6);
}
